# NEAT

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  check.sh  download_vox1.sh  pyproject.toml  readme.md  requirements.txt  setup.py  upload_pip.md
acouspike/: trainer.py  utils.py
acouspike/ASR/: asr.py
acouspike/ASR/encoder/: SRNN.py  vgg_rnn_encoder.py
acouspike/models/: eg_conf.yaml  model_warpper.py  network.py  network_archive.py  network_temp.py  neuron.py  sg.py
acouspike/models/SNN/: SSM.py  Spikeformer.py  SpikingNet.py  Spiking_LSTM.py  TCN.py  __init__.py
acouspike/models/architecture/: layer.py
acouspike/models/layers/: layer.py
acouspike/models/legancy_code/: network.py  sg.py
acouspike/models/network/: SSM.py  Spikeformer.py  SpikingCNN.py  SpikingNet.py  Spiking_LSTM.py  TCN.py
acouspike/models/neuron/: S4DModule.py  __init__.py  base_neuron.py  lif.py  membrane_update.py  neuron.py  test.py
acouspike/models/surrogate/: __init__.py  surrogate.py
acouspike/src/: accelerate.py  logger.py  trainer.py  trainer_utils.py  utils.py
acouspike/utils/: energy.py  monitor.py
neat/: __init__.py
neat/ASR/: asr.py
neat/ASR/encoder/: SRNN.py  vgg_rnn_encoder.py
neat/models/: model_warpper.py
neat/models/layers/: base.py  layer.py
neat/models/network/: SSM.py  Spikeformer.py  SpikingCNN.py  SpikingNet.py  Spiking_LSTM.py  TCN.py  utils.py
neat/models/neuron/: README.md  S4DModule.py  lif.py  neuron.py  test.py
neat/models/surrogate/: ASGL_surrogate.py
neat/src/: logger.py  trainer.py  trainer_args.py  utils.py
neat/utils/: monitor.py
recipes/ASR/: README.md  espnet_env.yaml  readme.md
recipes/ASR/egs2/: install.md
recipes/AuditoryAttentionDecoding/: dataloader.py  readme.md  run.py  run.sh  trainer.py
recipes/AuditoryAttentionDecoding/conf/: default.yaml
recipes/KeywordSpotting/: README.md  readme.md  run.py  run.sh  run1.sh  run_1.py  trainer.py
recipes/KeywordSpotting/conf/: LTC.yaml  adlif_gsc.yaml  default.yaml  default_1.yaml  gscv1.yaml  plif_gsc.yaml  ssc.yaml
recipes/KeywordSpotting/datasets/: gsc.py  shd.py  ssc.py
recipes/Speaker_identification/: README.md  grid_search.py  raw_transform.py  run.py  run.sh  run_ALIF.sh  run_LTC.sh  run_PLIF.sh  run_adLIF.sh  run_snn.sh  trainer.py  vox1_dataset.py
recipes/Speaker_identification/conf/: ALIF.yaml  LIF.yaml  LIF_template.yaml  LTC.yaml  LTC_template.yaml  PLIF.yaml  PMSN.yaml  adLIF.yaml  default.yaml  ltc_grid_0.yaml
recipes/Speaker_identification/voxceleb1_meta/: test.csv  val.csv
recipes/Speaker_verification/: LIF.sh  README.md  convert.py  dataset.py  download_vox1&2.sh  prep_data.sh  run.py  run.sh  run_adLIF.sh  run_adlif.sh  run_celif.sh  trainer.py
recipes/Speaker_verification/conf/: CELIF.yaml  LIF.yaml  PLIF.yaml  PMSN.yaml  adLIF.yaml  default.yaml
recipes/VAD/: dataset.py  run.py  run.sh
recipes/VAD/conf/: default.yaml
recipes/asr/: README.md
recipes/auditory_attention_decoding/: readme.md  run.py  run.sh  trainer.py
recipes/auditory_attention_decoding/preprocess/: preprocess_dtu.m  preprocess_kul.m
recipes/gsc/: dataloader.py
recipes/keyword_spotting/: README.md  run.py  run.sh  trainer.py
recipes/keyword_spotting/datasets/: gsc.py
recipes/speaker_identification/: README.md  download_vox1.sh  grid_search.py  run.py  run.sh  run_snn.sh  trainer.py  vox1_dataset.py  voxceleb_dev_test.sh
recipes/speaker_identification/voxceleb1_meta/: lbl_map.json  test.csv  val.csv
recipes/speaker_verification/: README.md  augment.py  prep_data.sh  run.py  run.sh  trainer.py
recipes/speaker_verification/conf/: adLIF.yaml
recipes/speaker_verification/loss/: __init__.py  amsoftmax.py  softmax.py  utils.py
recipes/speaker_verification/modules/: feature.py
recipes/speaker_verification/score/: cosine.py  utils.py
recipes/speaker_verification/scripts/: build_datalist.py
src/audiozen/: logger.py  trainer.py  utils.py
src/audiozen/acoustics/: audio_feature.py  io.py
(+131 files in other folders)
