[project]
name = "acouspike"
version = "0.1.0"
description = "A modern, lightweight library for Neuromorphic Audio Processing using Spiking Neural Networks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Zeyang Song", email = "zeyang_song@u.nus.edu" }
]
urls = { Repository = "https://github.com/ZhangShimin1/AcouSpike" }
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "simple-parsing>=0.1.7",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.67.1",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acouspike"]