[project]
name = "acouspike"
version = "0.1.0"
description = "A modern, lightweight library for Neuromorphic Audio Processing using Spiking Neural Networks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Zeyang Song", email = "zeyang_song@u.nus.edu" },
    { name = "Shimin Zhang", email = ""},
    { name = "Xiang HAO", email = "haoxiangsnr@gmail.com"}
]
urls = { Repository = "https://github.com/ZhangShimin1/AcouSpike" }
dependencies = [
    "h5py>=3.15.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "simple-parsing>=0.1.7",
    "soundfile>=0.13.1",
    "spikingjelly>=0.0.0.0.14",
    "torch==2.5.1",
    "torch-audiomentations>=0.12.0",
    "torchaudio==2.5.1",
    "torchaudio-augmentations>=0.2.4",
    "torchvision==0.20.1",
    "tqdm>=4.67.1",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acouspike"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
